# Cryptography-project

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py  pyproject.toml
backend/app/api/: __init__.py
backend/app/api/api_v1/: __init__.py  decryption.py  encryption.py
backend/app/core/: config.py  cryptography.py  schemas.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.css  main.js
frontend/src/components/: CryptoForm.vue
frontend/src/composables/: useCrypto.js
