[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Solomiia",email = "ughoh7512@gmail.com"}
]

requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.47.0,<0.48.0)",
    "cryptography (>=48.0.0,<49.0.0)",
    "python-multipart (>=0.0.29,<0.0.30)",
    "pydantic-settings (>=2.14.1,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
